--- a/uchsquad/templates/characters.html
+++ b/uchsquad/templates/characters.html
@@ -20,7 +20,8 @@
           action="{{ url_for('characters.show_characters') }}"
           method="get" style="display:inline;">
       <select name="user_idx"
-              onchange="document.getElementById('select-form').submit()">
+              onchange="document.getElementById('select-form').submit()"
+			  style="padding:4px 4px; font-size: 0.9rem;">
         <option value="">— 유저 선택 —</option>
         {% for u in users %}
           <option value="{{ u.idx }}"
