--- a/uchsquad/templates/users.html
+++ b/uchsquad/templates/users.html
@@ -12,7 +12,7 @@
 <form action="{{ url_for('users.add_user') }}" method="post">
   <input type="text" name="name" placeholder="유저 이름" required>
   <input type="text" name="adventure" placeholder="모험단 이름" required>
-  <button type="submit">추가</button>
+  <button type="submit" style="padding:1px 4px">추가</button>
 </form>
 
 <table>
@@ -25,7 +25,7 @@
       <td>
         <form action="{{ url_for('users.delete_user') }}" method="post" style="display:inline;">
           <input type="hidden" name="idx" value="{{ u.idx }}">
-          <button type="submit">삭제</button>
+          <button type="submit" style="padding:3px 10px">삭제</button>
         </form>
       </td>
     </tr>
