--- a/uchsquad/templates/users.html
+++ b/uchsquad/templates/users.html
@@ -1,5 +1,8 @@
 <!-- templates/users.html -->
 {% extends 'base.html' %}
+{% block styles %}
+  <link rel="stylesheet" href="{{ url_for('static', filename='users.css') }}">
+{% endblock %}
 {% block content %}
 
 {% if alert %}
@@ -12,7 +15,7 @@
 <form action="{{ url_for('users.add_user') }}" method="post">
   <input type="text" name="name" placeholder="유저 이름" required>
   <input type="text" name="adventure" placeholder="모험단 이름" required>
-  <button type="submit" style="padding:1px 4px">추가</button>
+  <button type="submit" style="padding:4px 4px; font-size: 0.9rem;">추가</button>
 </form>
 
 <table>
@@ -23,9 +26,9 @@
       <td>{{ u.name }}</td>
       <td>{{ u.adventure }}</td>
       <td>
-        <form action="{{ url_for('users.delete_user') }}" method="post" style="display:inline;">
+        <form action="{{ url_for('users.delete_user') }}" method="post" class="inline-form">
           <input type="hidden" name="idx" value="{{ u.idx }}">
-          <button type="submit" style="padding:3px 10px">삭제</button>
+          <button type="submit" style="padding:4px 6px; font-size: 0.9rem;">삭제</button>
         </form>
       </td>
     </tr>
